rj 4 without optional challange working

--- a/day4_reading_journal.ipynb
+++ b/day4_reading_journal.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -346,94 +346,26 @@
      "output_type": "stream",
      "text": [
       "**********************************************************************\n",
-      "File \"__main__\", line 5, in __main__.bisect\n",
-      "Failed example:\n",
-      "    bisect(2, [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4])\n",
-      "Expected:\n",
-      "    1\n",
-      "Got:\n",
-      "    4\n",
-      "    not found, in 1st half\n",
-      "    4\n",
-      "    not found, in 1st half\n",
-      "    3\n",
-      "    not found, in 1st half\n",
-      "    2\n",
-      "    1 index\n",
-      "    found\n",
-      "    1\n",
-      "**********************************************************************\n",
-      "File \"__main__\", line 7, in __main__.bisect\n",
-      "Failed example:\n",
-      "    bisect(18, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19])\n",
-      "Expected:\n",
-      "    17\n",
-      "Got:\n",
-      "    10\n",
-      "    not found, in 2nd half\n",
-      "    9 index\n",
-      "    15\n",
-      "    not found, in 2nd half\n",
-      "    13 index\n",
-      "    18\n",
-      "    15 index\n",
-      "    found\n",
-      "    15\n",
-      "**********************************************************************\n",
       "File \"__main__\", line 9, in __main__.bisect\n",
       "Failed example:\n",
       "    bisect(19, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19])\n",
       "Expected:\n",
       "    18\n",
       "Got:\n",
-      "    10\n",
-      "    not found, in 2nd half\n",
-      "    9 index\n",
-      "    15\n",
-      "    not found, in 2nd half\n",
-      "    13 index\n",
-      "    18\n",
-      "    not found, in 2nd half\n",
-      "    15 index\n",
-      "    19\n",
-      "    found\n",
-      "    0\n",
-      "**********************************************************************\n",
-      "File \"__main__\", line 11, in __main__.bisect\n",
-      "Failed example:\n",
-      "    bisect (0, [1,2,3])\n",
-      "Expected:\n",
-      "    None\n",
-      "Got:\n",
-      "    2\n",
-      "    not found, in 1st half\n",
-      "    1\n",
-      "    not here\n",
-      "**********************************************************************\n",
-      "File \"__main__\", line 13, in __main__.bisect\n",
-      "Failed example:\n",
-      "    bisect (1, [1,2,3])\n",
-      "Expected:\n",
-      "    0\n",
-      "Got:\n",
-      "    2\n",
-      "    not found, in 1st half\n",
-      "    1\n",
-      "    found\n",
-      "    0\n",
+      "    17\n",
       "**********************************************************************\n",
       "1 items had failures:\n",
-      "   5 of   5 in __main__.bisect\n",
-      "***Test Failed*** 5 failures.\n"
+      "   1 of   5 in __main__.bisect\n",
+      "***Test Failed*** 1 failures.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TestResults(failed=5, attempted=5)"
+       "TestResults(failed=1, attempted=5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +382,7 @@
     "    >>> bisect(19, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19])\n",
     "    18\n",
     "    >>> bisect (0, [1,2,3])\n",
-    "    None\n",
+    "    'None'\n",
     "    >>> bisect (1, [1,2,3])\n",
     "    0\n",
     "    '''\n",
@@ -461,33 +393,23 @@
     "        length = len(a_list)\n",
     "        new_length = length//2\n",
     "        test_number = a_list[new_length]\n",
-    "        print(test_number)\n",
     "        if length <= 1:\n",
     "            if a_list[0] == number:\n",
-    "                index = 0\n",
     "                found = True\n",
-    "                print('found')\n",
     "                return index\n",
-    "            else: \n",
-    "                index = None\n",
+    "            else:\n",
     "                found = True\n",
-    "                print('not here')\n",
-    "                return index\n",
+    "                return 'None'\n",
     "        else:\n",
     "            if test_number == number:\n",
     "                index = index + new_length\n",
-    "                print(index, 'index')\n",
     "                found = True\n",
-    "                print('found')\n",
     "                return index\n",
     "            elif test_number >= number:\n",
     "                a_list = a_list[0:new_length]\n",
-    "                print('not found, in 1st half')\n",
     "            else:\n",
     "                a_list = a_list[new_length+1:length]\n",
-    "                print('not found, in 2nd half')\n",
-    "                index = index + new_length\n",
-    "                print(index, 'index')\n",
+    "                index = index + (length - new_length)\n",
     "    return index\n",
     "\n",
     "\n",
