reading journal day 5

--- a/day5_reading_journal.ipynb
+++ b/day5_reading_journal.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -61,6 +61,70 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chapter 4.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<turtle.Turtle object at 0x7f8f1403cb38>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mypolygon.py\n",
+    "from turtle import *\n",
+    "\n",
+    "bob = Turtle()\n",
+    "print(bob)\n",
+    "\n",
+    "bob.fd(100)\n",
+    "bob.lt(90)\n",
+    "bob.fd(100)\n",
+    "\n",
+    "turtle.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<turtle.Turtle object at 0x7f8f14056828>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# square\n",
+    "from turtle import *\n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "for i in range(4):\n",
+    "    bob.fd(100)\n",
+    "    bob.lt(90)\n",
+    "\n",
+    "turtle.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "is_question": true,
     "problem": "Section 4.3"
@@ -72,13 +136,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Section 4.3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 1\n",
+    "from turtle import *\n",
+    "\n",
+    "def square(turtle):\n",
+    "    for i in range(4):\n",
+    "        turtle.fd(100)\n",
+    "        turtle.lt(90)\n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "square(bob)\n",
+    "\n",
+    "turtle.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 2\n",
+    "from turtle import *\n",
+    "\n",
+    "def square(turtle, length):\n",
+    "    for i in range(4):\n",
+    "        turtle.fd(length)\n",
+    "        turtle.lt(90)\n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "square(bob,200)\n",
+    "\n",
+    "turtle.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 3\n",
+    "from turtle import *\n",
+    "\n",
+    "def polygon(turtle, length, n):\n",
+    "    angle = 360/n\n",
+    "    for i in range(n):\n",
+    "        turtle.fd(length)\n",
+    "        turtle.lt(angle)\n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "polygon(bob,50,17)\n",
+    "\n",
+    "turtle.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 3\n",
+    "from turtle import *\n",
+    "\n",
+    "def polygon(turtle, length, n):\n",
+    "    angle = 360/n\n",
+    "    for i in range(n):\n",
+    "        turtle.fd(length)\n",
+    "        turtle.lt(angle)\n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "polygon(bob,50,17)\n",
+    "\n",
+    "turtle.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 4\n",
+    "from turtle import *\n",
+    "import math\n",
+    "\n",
+    "def polygon(turtle, length, n):\n",
+    "    angle = 360/n\n",
+    "    for i in range(n):\n",
+    "        turtle.fd(length)\n",
+    "        turtle.lt(angle)\n",
+    "def circle(t,r):\n",
+    "    angle_radians = math.radians(1)\n",
+    "    length = 2*r*math.sin(angle_radians)\n",
+    "    polygon(t,length,360)\n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "circle(bob,100)\n",
+    "\n",
+    "mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 5\n",
+    "from turtle import *\n",
+    "import math\n",
+    "\n",
+    "def polygon(turtle, length, n, angle):\n",
+    "    for i in range(n):\n",
+    "        turtle.fd(length)\n",
+    "        turtle.lt(angle)\n",
+    "def arc(t,r,arc_angle):\n",
+    "    angle = 1\n",
+    "    radians = math.radians(angle)\n",
+    "    length = 2*r*math.sin(radians)\n",
+    "    polygon(t,length,arc_angle,angle)\n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "arc(bob, 100, 90)\n",
+    "\n",
+    "mainloop()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,11 +303,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "More fun"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 2\n",
+    "from turtle import *\n",
+    "import math\n",
+    "\n",
+    "def polygon(turtle, length, n, angle):\n",
+    "    '''draws polygon with turtle with \n",
+    "    side length length, n sides,\n",
+    "    and angle angle'''\n",
+    "    for i in range(n):\n",
+    "        turtle.fd(length)\n",
+    "        turtle.lt(angle)\n",
+    "        \n",
+    "        \n",
+    "def arc(t,r,arc_angle):\n",
+    "    '''draws arc of radius r \n",
+    "    and arc_angle angle'''\n",
+    "    angle = 1\n",
+    "    radians = math.radians(angle)\n",
+    "    length = 2*r*math.sin(radians)\n",
+    "    polygon(t,length,arc_angle,angle)\n",
+    "\n",
+    "    \n",
+    "def petal(t,r,n,angle):\n",
+    "    '''draws petals with arc radius r\n",
+    "    n = number of total petals'''\n",
+    "    for i in range(2):\n",
+    "        arc(t,r,angle)\n",
+    "        t.lt(180-angle)\n",
+    "    \n",
+    "    \n",
+    "def flower(t,r,n,angle):\n",
+    "    '''draws flower with arc radius r \n",
+    "    and petals number of petals'''\n",
+    "    for i in range(n):\n",
+    "        petal(t,r,n,angle)\n",
+    "        t.lt(360/n)\n",
+    "        \n",
+    "\n",
+    "bob = Turtle()\n",
+    "\n",
+    "flower(bob, 60, 7, 60)\n",
+    "\n",
+    "mainloop()\n",
+    "flower(bob)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
