some of rj day 6

--- a/day6_reading_journal.ipynb
+++ b/day6_reading_journal.ipynb
@@ -77,6 +77,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://goo.gl/zjmmbj"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "is_question": true,
     "problem": "Exercise 6.6"
@@ -95,13 +102,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "\n",
+    "def is_palindrome(word):\n",
+    "    '''returns string if wordf is palindrome\n",
+    "    >>> is_palindrome('redivider')\n",
+    "    True\n",
+    "    >>> is_palindrome('yo face')\n",
+    "    False\n",
+    "    '''\n",
+    "    end = len(word) - 1\n",
+    "    if word[0] != word[end]:\n",
+    "        return False\n",
+    "    else:\n",
+    "        word = word[1:end-1]\n",
+    "    return True\n",
+    "\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,13 +153,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.6 challenge"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7424\n"
+     ]
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "\n",
+    "def is_palindrome(word):\n",
+    "    '''returns string if wordf is palindrome\n",
+    "    >>> is_palindrome('redivider')\n",
+    "    True\n",
+    "    >>> is_palindrome('yo face')\n",
+    "    False\n",
+    "    '''\n",
+    "    end = len(word) - 1\n",
+    "    if word[0] != word[end]:\n",
+    "        return False\n",
+    "    else:\n",
+    "        word = word[1:end-1]\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def all_palindromes(file):\n",
+    "    '''returns all palindromes in file assuming all words are'''\n",
+    "    list_palindromes = []\n",
+    "    for line in file:\n",
+    "        word = line.strip()\n",
+    "        if is_palindrome(word):\n",
+    "            list_palindromes = list_palindromes + [word]\n",
+    "    return list_palindromes\n",
+    "\n",
+    "doctest.testmod()\n",
+    "fin = open('words.txt')\n",
+    "palindromes = all_palindromes(fin)\n",
+    "print(len(palindromes))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
