day6 rj without challange complete

--- a/day6_reading_journal.ipynb
+++ b/day6_reading_journal.ipynb
@@ -214,13 +214,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=2)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math, doctest\n",
+    "\n",
+    "def is_power(a,b):\n",
+    "    '''returns True if a is a power of b\n",
+    "    >>> is_power(8,2)\n",
+    "    True\n",
+    "    >>> is_power(8,3)\n",
+    "    False\n",
+    "    '''\n",
+    "    test1 = ((a%b) == 0)\n",
+    "    log = math.log(a/b)/math.log(b)\n",
+    "    int_log = int(log)\n",
+    "    test2 = (log == int_log)\n",
+    "    if test1 and test2:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,13 +271,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "problem": "Exercise 6.8"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 29, in __main__.gcd\n",
+      "Failed example:\n",
+      "    gcd(1,2)\n",
+      "Expected:\n",
+      "    1\n",
+      "Got:\n",
+      "    0\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 31, in __main__.gcd\n",
+      "Failed example:\n",
+      "    gcd(8,12)\n",
+      "Expected:\n",
+      "    4\n",
+      "Got:\n",
+      "    0\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   2 of   2 in __main__.gcd\n",
+      "***Test Failed*** 2 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=2, attempted=6)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "\n",
+    "def divisible(a, b):\n",
+    "    '''returns true if a is divisible by b\n",
+    "    >>> divisible(1,2)\n",
+    "    False\n",
+    "    >>> divisible(8,2)\n",
+    "    True\n",
+    "    '''\n",
+    "    if a%b == 0:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def test_gcd(a, b, c):\n",
+    "    '''tests if c is a greatest common divisor of a and b\n",
+    "    >>> test_gcd(8, 12, 4)\n",
+    "    True\n",
+    "    >>> test_gcd(8, 12, 3)\n",
+    "    False\n",
+    "    '''\n",
+    "    test_a = divisible(a, c)\n",
+    "    test_b = divisible(b, c)\n",
+    "    if test_a and test_b:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def gcd(a, b):\n",
+    "    '''finds the greatest common divisor of a and b\n",
+    "    >>> gcd(1,2)\n",
+    "    1\n",
+    "    >>> gcd(8,12)\n",
+    "    4\n",
+    "    '''\n",
+    "    gcd = 0\n",
+    "    r = b%a\n",
+    "    \n",
+    "    return gcd\n",
+    "\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
