--- a/day6_reading_journal.ipynb
+++ b/day6_reading_journal.ipynb
@@ -241,13 +241,13 @@
     "    >>> is_power(8,3)\n",
     "    False\n",
     "    '''\n",
-    "    test1 = ((a%b) == 0)\n",
-    "    log = math.log(a/b)/math.log(b)\n",
-    "    int_log = int(log)\n",
-    "    test2 = (log == int_log)\n",
-    "    if test1 and test2:\n",
-    "        return True\n",
-    "    return False\n",
+    "    if a%b == 0:\n",
+    "        if a/b == 1:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return is_power(a/b,b)\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "\n",
     "doctest.testmod()"
@@ -271,75 +271,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "problem": "Exercise 6.8"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********************************************************************\n",
-      "File \"__main__\", line 29, in __main__.gcd\n",
-      "Failed example:\n",
-      "    gcd(1,2)\n",
-      "Expected:\n",
-      "    1\n",
-      "Got:\n",
-      "    0\n",
-      "**********************************************************************\n",
-      "File \"__main__\", line 31, in __main__.gcd\n",
-      "Failed example:\n",
-      "    gcd(8,12)\n",
-      "Expected:\n",
-      "    4\n",
-      "Got:\n",
-      "    0\n",
-      "**********************************************************************\n",
-      "1 items had failures:\n",
-      "   2 of   2 in __main__.gcd\n",
-      "***Test Failed*** 2 failures.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "TestResults(failed=2, attempted=6)"
+       "TestResults(failed=0, attempted=6)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import doctest\n",
-    "\n",
-    "def divisible(a, b):\n",
-    "    '''returns true if a is divisible by b\n",
-    "    >>> divisible(1,2)\n",
-    "    False\n",
-    "    >>> divisible(8,2)\n",
-    "    True\n",
-    "    '''\n",
-    "    if a%b == 0:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "def test_gcd(a, b, c):\n",
-    "    '''tests if c is a greatest common divisor of a and b\n",
-    "    >>> test_gcd(8, 12, 4)\n",
-    "    True\n",
-    "    >>> test_gcd(8, 12, 3)\n",
-    "    False\n",
-    "    '''\n",
-    "    test_a = divisible(a, c)\n",
-    "    test_b = divisible(b, c)\n",
-    "    if test_a and test_b:\n",
-    "        return True\n",
-    "    return False\n",
     "\n",
     "def gcd(a, b):\n",
     "    '''finds the greatest common divisor of a and b\n",
@@ -348,10 +298,11 @@
     "    >>> gcd(8,12)\n",
     "    4\n",
     "    '''\n",
-    "    gcd = 0\n",
     "    r = b%a\n",
-    "    \n",
-    "    return gcd\n",
+    "    if r == 0:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return gcd(b,r)\n",
     "\n",
     "doctest.testmod()"
    ]
