day7, not quite finished

--- a/day7_reading_journal.ipynb
+++ b/day7_reading_journal.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A dictionary maps one set of values to another. The indicies of values don't necessarily have to be integers like they have to be in a list."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,21 +68,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 11.2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'e': 1, 'l': 1, 'u': 1, 's': 1, 'b': 3}\n"
+     ]
+    }
+   ],
    "source": [
+    "import doctest\n",
+    "\n",
     "def histogram(s):\n",
+    "    '''counts number of characters in string s\n",
+    "    >>> histogram('bubbles')\n",
+    "    {'e': 1, 'l': 1, 'u': 1, 's': 1, 'b': 3}\n",
+    "    '''\n",
     "    d = dict()\n",
     "    for c in s:\n",
-    "        if c not in d:\n",
-    "            d[c] = 1\n",
-    "        else:\n",
-    "            d[c] += 1\n",
-    "    return d"
+    "        value = d.get(c, 0)\n",
+    "        d[c] = value + 1\n",
+    "    return d\n",
+    "\n",
+    "doctest.testmod()\n",
+    "print(histogram('bubbles'))"
    ]
   },
   {
@@ -104,18 +121,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 8, in __main__.reverse_lookup\n",
+      "Failed example:\n",
+      "    reverse_lookup({'a': 1, 'b': 2, 'c': 1, 'e': 1}, 3)\n",
+      "Exception raised:\n",
+      "    Traceback (most recent call last):\n",
+      "      File \"/usr/lib/python3.4/doctest.py\", line 1318, in __run\n",
+      "        compileflags, 1), test.globs)\n",
+      "      File \"<doctest __main__.reverse_lookup[1]>\", line 1, in <module>\n",
+      "        reverse_lookup({'a': 1, 'b': 2, 'c': 1, 'e': 1}, 3)\n",
+      "      File \"<ipython-input-2-139aca6f0df9>\", line 16, in reverse_lookup\n",
+      "        raise ValueError\n",
+      "    ValueError\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   1 of   2 in __main__.reverse_lookup\n",
+      "***Test Failed*** 1 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=1, attempted=2)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import doctest\n",
+    "\n",
     "def reverse_lookup(d, v):\n",
+    "    '''builds and retruns list of all keys that map \n",
+    "    to v or an empty list if there are none\n",
+    "    >>> reverse_lookup({'a': 1, 'b': 2, 'c': 1, 'e': 1}, 1)\n",
+    "    ['a', 'c', 'e']\n",
+    "    >>> reverse_lookup({'a': 1, 'b': 2, 'c': 1, 'e': 1}, 3)\n",
+    "    ValueError\n",
+    "    '''\n",
+    "    value_list = []\n",
     "    for k in d:\n",
     "        if d[k] == v:\n",
-    "            return k\n",
-    "    raise ValueError"
+    "            value_list = value_list + [k]\n",
+    "    if value_list == []:\n",
+    "        raise ValueError\n",
+    "    return value_list\n",
+    "    \n",
+    "doctest.testmod()"
    ]
   },
   {
@@ -142,7 +207,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Keys have to be hashable (able to be turned into an integer) in a dictionary, which means they have to be immutable "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,13 +236,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=3)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def levenshtein_distance(string_1, len_1, string_2, len_2):\n",
+    "    '''finds the Levenshtein distance between string 1\n",
+    "    and string 2\n",
+    "    >>> levenshtein_distance('hello', 5, 'hello', 5)\n",
+    "    0\n",
+    "    >>> levenshtein_distance('catch', 5, 'match', 5)\n",
+    "    1\n",
+    "    >>> levenshtein_distance('catch-22', 8, 'match', 5)\n",
+    "    4\n",
+    "    '''\n",
+    "    \n",
+    "    # base-case: empty strings\n",
+    "    if len_1 == 0:\n",
+    "        return len_2\n",
+    "    if len_2 == 0:\n",
+    "        return len_1\n",
+    "    \n",
+    "    # text if last chrarters of strings match\n",
+    "    if string_1[len_1 - 1] == string_2[len_2 - 1]:\n",
+    "        dist = 0\n",
+    "    else:\n",
+    "        dist = 1\n",
+    "    \n",
+    "    # recurse: return minimum of LD removing char from string_1,\n",
+    "    # removing character from string_2, and deleting char from both\n",
+    "    reduce_1 = levenshtein_distance(string_1, len_1 - 1, string_2, len_2) + 1\n",
+    "    reduce_2 = levenshtein_distance(string_1, len_1, string_2, len_2 - 1) + 1\n",
+    "    reduce_both = levenshtein_distance(string_1, len_1 - 1, string_2, len_2 - 1) + dist\n",
+    "    minimum = min(reduce_1, reduce_2, reduce_both)\n",
+    "    return minimum\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +308,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A tuple is like a list, but immutable:\n",
+    "* can be written as t = 'a', 'b', 'c' or t = ('a', 'b', 'c')\n",
+    "* but one value in a parentheses is not a tuple\n",
+    "* you can make it a tuple by using the built in function tuple()\n",
+    "\n",
+    "Operations you can perform on a tuple:\n",
+    "* bracket operator indexes: t[0]\n",
+    "* slice operator: t[1:3]\n",
+    "* relational operators: (0, 1, 20000) < (0, 3, 4), returns true\n",
+    "\n",
+    "Operations you can't perform on a tuple:\n",
+    "* reassigning an index: t[0] = 3\n",
+    "\n",
+    "Tuple assignment:\n",
+    "* switching values: a, b = b, a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,13 +363,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12.1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=5)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum_all(*t):\n",
+    "    '''sums all elements in tupple t\n",
+    "    >>> sum_all(1, 2, 3)\n",
+    "    6\n",
+    "    >>> sum_all(1)\n",
+    "    1\n",
+    "    '''\n",
+    "    total = 0\n",
+    "    for i in t:\n",
+    "        total = total + i\n",
+    "    return total\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,13 +432,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12 sort"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 3, in __main__.sort_by_last_letter\n",
+      "Failed example:\n",
+      "    sort_by_last_letter([\"hello\",\"what's up\",\"hi\"])\n",
+      "Expected:\n",
+      "    [\"hi\",\"hello\",\"what's up\"]\n",
+      "Got:\n",
+      "    [('hello', 111), ('hi', 105), (\"what's up\", 112)]\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   1 of   1 in __main__.sort_by_last_letter\n",
+      "***Test Failed*** 1 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=1, attempted=1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sort_by_last_letter(l):\n",
+    "    '''sorts list of strings l by last letter\n",
+    "    >>> sort_by_last_letter([\"hello\",\"what's up\",\"hi\"])\n",
+    "    [\"hi\",\"hello\",\"what's up\"]\n",
+    "    '''\n",
+    "    # decorate (ascii)\n",
+    "    for i in range(len(l)):\n",
+    "        l[i] = (l[i], ord(l[i][len(l[i])-1]))\n",
+    "\n",
+    "    # sort\n",
+    "    for i in range(len(l)-1):\n",
+    "        for j in range(i,len(l)-i):\n",
+    "            if l[i] > l[i+j]:\n",
+    "                l[i], l[i+j] = l[i+j], l[i]\n",
+    "\n",
+    "    return l\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -340,7 +543,9 @@
     "solution": "Exercise 12.3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def most_frequent()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -438,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
