--- a/day7_reading_journal.ipynb
+++ b/day7_reading_journal.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 12 sort"
@@ -447,22 +447,22 @@
       "Failed example:\n",
       "    sort_by_last_letter([\"hello\",\"what's up\",\"hi\"])\n",
       "Expected:\n",
-      "    [\"hi\",\"hello\",\"what's up\"]\n",
+      "    ['hi', 'hello', 'what's up']\n",
       "Got:\n",
-      "    [('hello', 111), ('hi', 105), (\"what's up\", 112)]\n",
+      "    ['hi', 'hello', \"what's up\"]\n",
       "**********************************************************************\n",
       "1 items had failures:\n",
-      "   1 of   1 in __main__.sort_by_last_letter\n",
+      "   1 of   2 in __main__.sort_by_last_letter\n",
       "***Test Failed*** 1 failures.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TestResults(failed=1, attempted=1)"
+       "TestResults(failed=1, attempted=2)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,17 +471,22 @@
     "def sort_by_last_letter(l):\n",
     "    '''sorts list of strings l by last letter\n",
     "    >>> sort_by_last_letter([\"hello\",\"what's up\",\"hi\"])\n",
-    "    [\"hi\",\"hello\",\"what's up\"]\n",
+    "    ['hi', 'hello', 'what's up']\n",
+    "    >>> sort_by_last_letter([\"actually\", \"not\", \"coordinate\", \"system\", \"crack\"])\n",
+    "    ['coordinate', 'crack', 'system', 'not', 'actually']\n",
     "    '''\n",
     "    # decorate (ascii)\n",
     "    for i in range(len(l)):\n",
     "        l[i] = (l[i], ord(l[i][len(l[i])-1]))\n",
     "\n",
     "    # sort\n",
-    "    for i in range(len(l)-1):\n",
-    "        for j in range(i,len(l)-i):\n",
-    "            if l[i] > l[i+j]:\n",
-    "                l[i], l[i+j] = l[i+j], l[i]\n",
+    "    for i in range(len(l)):\n",
+    "        for j in range(len(l)-1):\n",
+    "            if l[j][1] > l[j+1][1]:\n",
+    "                l[j], l[j+1] = l[j+1], l[j]\n",
+    "    # undecorate\n",
+    "    for i in range(len(l)):\n",
+    "        l[i] = str(l[i][0])\n",
     "\n",
     "    return l\n",
     "\n",
@@ -537,14 +542,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12.3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=2)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def most_frequent()"
+    "def most_frequent(s):\n",
+    "    '''prints letters in string s in decreasing \n",
+    "    order of frequency\n",
+    "    >>> most_frequent(\"banana\")\n",
+    "    a\n",
+    "    n\n",
+    "    b\n",
+    "    >>> most_frequent(\"mississippis\")\n",
+    "    s\n",
+    "    i\n",
+    "    p\n",
+    "    m\n",
+    "    '''\n",
+    "    d = dict()\n",
+    "    for c in s:\n",
+    "        value = d.get(c, 0)\n",
+    "        d[c] = value + 1\n",
+    "    \n",
+    "    d = sorted(d, key=d.get, reverse=True)\n",
+    "    for c in d:\n",
+    "        print(c)\n",
+    "\n",
+    "        \n",
+    "import doctest\n",
+    "doctest.testmod()"
    ]
   },
   {
