--- a/day9_reading_journal.ipynb
+++ b/day9_reading_journal.ipynb
@@ -35,13 +35,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 16.2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Time:\n",
+    "    ''''''\n",
+    "\n",
+    "\n",
+    "def is_after(t1, t2):\n",
+    "    '''takes time objects t1 and t2\n",
+    "    returns Ture if t1 follos t2 chronologically\n",
+    "    '''\n",
+    "    if t1.hours > t2.hours:\n",
+    "        return True\n",
+    "    elif t1.hours == t2.hours:\n",
+    "        if t1.minutes > t2.minutes:\n",
+    "            return True\n",
+    "        elif t1.minutes == t2.minutes:\n",
+    "            if t1.seconds > t2.seconds:\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "t1 = Time()\n",
+    "t1.hours = 1\n",
+    "t1.minutes = 3\n",
+    "t1.seconds = 2\n",
+    "\n",
+    "t2 = Time()\n",
+    "t2.hours = 1\n",
+    "t2.minutes = 3\n",
+    "t2.seconds = 1\n",
+    "\n",
+    "print(is_after(t1, t2)) # should print True\n",
+    "\n",
+    "t2.seconds = 3\n",
+    "\n",
+    "print(is_after(t1, t2)) # should print False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +115,13 @@
     "solution": "Exercise 17.2"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Point():\n",
+    "    \n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,13 +137,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point():\n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return '(%.d,%.d)' % (self.x, self.y)\n",
+    "    \n",
+    "\n",
+    "p1 = Point(3,6)\n",
+    "print(p1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,13 +180,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7,11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return '(%.d,%.d)' % (self.x, self.y)\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return Point(self.x + other.x, self.y + other.y)\n",
+    "    \n",
+    "\n",
+    "p1 = Point(3,6)\n",
+    "p2 = Point(4,5)\n",
+    "\n",
+    "p3 = p1 + p2\n",
+    "print(p3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,13 +239,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kanga, pouch: ['roo, pouch: []']\n",
+      "roo, pouch: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Kangaroo:\n",
+    "    def __init__(self, name, contents=None):\n",
+    "        self.name = name\n",
+    "        if contents == None:\n",
+    "            self.pouch_contents = []\n",
+    "            \n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return '%s, pouch: %s' % (self.name, self.pouch_contents)\n",
+    "    \n",
+    "    \n",
+    "    def put_in_pouch(self, obj):\n",
+    "        self.pouch_contents += [str(obj)]\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "kanga = Kangaroo(\"kanga\")\n",
+    "roo = Kangaroo(\"roo\")\n",
+    "kanga.put_in_pouch(roo)\n",
+    "print(kanga)\n",
+    "print(roo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,7 +318,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
