--- a/day9_reading_journal.ipynb
+++ b/day9_reading_journal.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 17.7"
@@ -249,8 +249,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kanga, pouch: ['roo, pouch: []']\n",
-      "roo, pouch: []\n"
+      "kanga: roo: , \n",
+      "roo: \n"
      ]
     }
    ],
@@ -263,11 +263,14 @@
     "            \n",
     "    \n",
     "    def __str__(self):\n",
-    "        return '%s, pouch: %s' % (self.name, self.pouch_contents)\n",
+    "        contents = ''\n",
+    "        for i in self.pouch_contents:\n",
+    "            contents = contents + str(i) + ', '\n",
+    "        return '%s: %s' % (self.name, contents)\n",
     "    \n",
     "    \n",
     "    def put_in_pouch(self, obj):\n",
-    "        self.pouch_contents += [str(obj)]\n",
+    "        self.pouch_contents += [obj]\n",
     "    \n",
     "    \n",
     "\n",
