--- a/day12_reading_journal.ipynb
+++ b/day12_reading_journal.ipynb
@@ -37,12 +37,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 18.3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Deck'>\n",
+      "Ace of Diamonds\n",
+      "2 of Diamonds\n",
+      "Ace of Hearts\n",
+      "Jack of Hearts\n",
+      "9 of Spades\n",
+      "[<__main__.Hand object at 0x7f75a8945d30>, <__main__.Hand object at 0x7f75a8945fd0>, <__main__.Hand object at 0x7f75a8945f28>, <__main__.Hand object at 0x7f75a8945b70>, <__main__.Hand object at 0x7f75a8945a20>]\n",
+      "\n",
+      "7 of Hearts\n",
+      "7 of Diamonds\n",
+      "10 of Hearts\n",
+      "4 of Spades\n",
+      "7 of Spades\n",
+      "3 of Diamonds\n",
+      "8 of Diamonds\n",
+      "9 of Clubs\n",
+      "9 of Hearts\n",
+      "8 of Spades\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"This module contains a code example related to\n",
     "\n",
@@ -159,6 +184,17 @@
     "        \"\"\"\n",
     "        for i in range(num):\n",
     "            hand.add_card(self.pop_card())\n",
+    "    \n",
+    "    def deal_hands(self, n_hands, n_cards):\n",
+    "        \"\"\"deals appropriate number of cards per hand\n",
+    "        returns a list of hand object4s\n",
+    "        \"\"\"\n",
+    "        hands = []\n",
+    "        for n in range(n_hands):\n",
+    "            hand = Hand(self)\n",
+    "            self.move_cards(hand, n)\n",
+    "            hands.append(hand)\n",
+    "        return hands\n",
     "\n",
     "\n",
     "class Hand(Deck):\n",
@@ -192,7 +228,12 @@
     "\n",
     "    deck.move_cards(hand, 5)\n",
     "    hand.sort()\n",
-    "    print(hand)"
+    "    print(hand)\n",
+    "    \n",
+    "    hands = deck.deal_hands(5, 2)\n",
+    "    print(hands)\n",
+    "    for hand in hands:\n",
+    "        print(hand)"
    ]
   },
   {
@@ -249,6 +290,9 @@
     "        self.suits = {}\n",
     "        for card in self.cards:\n",
     "            self.suits[card.suit] = self.suits.get(card.suit, 0) + 1\n",
+    "            \n",
+    "    def rank_hist(self):\n",
+    "        \"\"\"Build a histogram of suits that appear in the hand\"\"\"\n",
     "\n",
     "    def has_flush(self):\n",
     "        \"\"\"Returns True if the hand has a flush, False otherwise.\n",
@@ -260,7 +304,11 @@
     "            if val >= 5:\n",
     "                return True\n",
     "        return False\n",
+    "    \n",
+    "    def has_pair(self):\n",
+    "        \"\"\"Returns True if hand has a pair, Fale otherwise.\"\"\"\n",
     "\n",
+    "        \n",
     "\n",
     "if __name__ == '__main__':\n",
     "    # make a deck\n",
@@ -316,21 +364,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
